packages/dartvel_shelf/rust/include/dartvel_shelf.h

#ifndef DARTVEL_SHELF_H
#define DARTVEL_SHELF_H

#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * The shape of the calls between this library and Dart.
 *
 * Raised whenever a callback's signature changes. A Dart side built for one
 * shape calling a library built for another does not fail cleanly: a
 * callback invoked with fewer arguments than Dart expects reads whatever is
 * in the missing argument's register, and a stale committed library would do
 * exactly that. Dart checks this before registering anything.
 */
#define AW_ABI_VERSION 2

#define AW_FLAG_H2C 1

typedef struct FfiStr {
  const uint8_t *ptr;
  size_t len;
} FfiStr;

typedef struct FfiBuf {
  const uint8_t *ptr;
  size_t len;
} FfiBuf;

typedef void (*DartReqHandler)(uint64_t,
                               struct FfiStr,
                               struct FfiStr,
                               const uint8_t*,
                               size_t,
                               struct FfiBuf,
                               struct FfiStr);

typedef void (*DartStreamCancelHandler)(uint64_t);

typedef struct FfiResp {
  uint16_t status;
  struct FfiBuf body;
  const uint8_t *hdrs;
  size_t hdrs_len;
  uint8_t is_stream;
} FfiResp;

uint32_t aw_abi_version(void);

void aw_register_handler(DartReqHandler cb);

void aw_register_cancel_handler(DartStreamCancelHandler cb);

int32_t aw_configure_cors(struct FfiStr config_json);

int32_t aw_tls_rustls_from_pem(struct FfiBuf cert_pem, struct FfiBuf key_pem);

int32_t aw_configure_static(struct FfiStr path);

int32_t aw_configure_spa_root(struct FfiStr path);

int32_t aw_configure_compression(int32_t enabled);

/**
 * The request timeout for the next server this thread starts, in
 * milliseconds. It bounds reading a request's headers, reading its body,
 * and waiting for Dart's answer; past it the connection is answered (408
 * for a body that never arrived, 504 for Dart) or, with headers unfinished,
 * closed. Zero is refused with 1: a request that may take no time at all is
 * a server that answers nothing.
 */
int32_t aw_configure_request_timeout(uint64_t milliseconds);

/**
 * Dart has copied the request [req_id]'s bytes out of native memory, which
 * may now be freed.
 */
void aw_request_received(uint64_t req_id);

int32_t aw_start(struct FfiStr host, uint16_t port, uint32_t _flags);

/**
 * The port [server_id] is listening on, or 0 if it is unknown.
 *
 * Meaningful because a caller may start a server on port 0 and let the OS
 * choose; without this there is no way to learn where it landed.
 */
uint16_t aw_server_port(uint64_t server_id);

int32_t aw_stop(uint64_t server_id);

int32_t aw_complete(uint64_t req_id, struct FfiResp resp);

int32_t aw_stream_send_chunk(uint64_t req_id, struct FfiBuf chunk);

int32_t aw_stream_complete(uint64_t req_id);

#endif  /* DARTVEL_SHELF_H */